force-app/main/default/objects/OI_Graph_Edge__c/OI_Graph_Edge__c.object-meta.xml
<CustomObject>
    <label>OI Graph Edge</label>
    <pluralLabel>OI Graph Edges</pluralLabel>
    <nameField>
        <label>Graph Edge Name</label>
        <type>AutoNumber</type>
        <displayFormat>EDGE-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Canonical edge version table (Architecture §5) — same one-row-per-version structure as OI_Graph_Node__c, for the identical reason (ADR-0014). Application-internal (ADR-0006).</description>
</CustomObject>