force-app/main/default/objects/OI_Graph_Edge__c/fields/Attributes_Json__c.field-meta.xml
<CustomField>
    <fullName>Attributes_Json__c</fullName>
    <label>Attributes Json</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>