force-app/main/default/objects/OI_Graph_Edge__c/fields/Edge_Key__c.field-meta.xml
<CustomField>
    <fullName>Edge_Key__c</fullName>
    <label>Edge Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The logical edge identity: hash(SourceNodeKey + EdgeTypeKey + TargetNodeKey).</description>
</CustomField>