force-app/main/default/objects/OI_Graph_Edge__c/fields/Edge_Type__c.field-meta.xml
<CustomField>
    <fullName>Edge_Type__c</fullName>
    <label>Edge Type</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Opaque type key (e.g. SalesforceMetadata.References), validated against OI_Edge_Type_Descriptor__mdt at the Scanner boundary — not a Picklist (ADR-0011).</description>
</CustomField>