force-app/main/default/objects/OI_Graph_Edge__c/fields/Edge_Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Edge_Version_Key__c</fullName>
    <label>Edge Version Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>{Edge_Key__c}::v{Version_Number__c} — the actual unique identity of this row.</description>
</CustomField>