force-app/main/default/objects/OI_Graph_Edge__c/fields/Graph_Scope__c.field-meta.xml
<CustomField>
    <fullName>Graph_Scope__c</fullName>
    <label>Graph Scope</label>
    <type>Text</type>
    <length>80</length>
</CustomField>