force-app/main/default/objects/OI_Graph_Edge__c/fields/Last_Seen_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_Run__c</fullName>
    <label>Last Seen Run</label>
    <type>Lookup</type>
    <referenceTo>OI_Scan_Run__c</referenceTo>
    <relationshipName>OI_Last_Seen_Edges</relationshipName>
    <relationshipLabel>OI Graph Edges (Last Seen)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>