force-app/main/default/objects/OI_Graph_Edge__c/fields/Source_Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Node_Key__c</fullName>
    <label>Source Node Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Points to OI_Graph_Node__c.Node_Key__c — the logical key, not a specific version. Text reference, not a standard Lookup (GraphEngine.md §3).</description>
</CustomField>