force-app/main/default/objects/OI_Graph_Edge__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Discovered</fullName><default>true</default><label>Discovered</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Stale</fullName><default>false</default><label>Stale</label></value>
            <value><fullName>SoftDeleted</fullName><default>false</default><label>Soft Deleted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>