force-app/main/default/objects/OI_Graph_Edge__c/fields/Target_Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Node_Key__c</fullName>
    <label>Target Node Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Points to OI_Graph_Node__c.Node_Key__c — the logical key, not a specific version.</description>
</CustomField>