force-app/main/default/objects/OI_Graph_Edge__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
    <description>Reserved for future ranking/impact-scoring use.</description>
</CustomField>